# nscldaq-format

./: Makefile.am  README.md  StringsToIntegers.cpp  configure.ac
Buffer/: BufferPtr.h  ByteBuffer.h  ByteOrder.cpp  ByteOrder.h  ContainerDeserializer.h  Deserializer.h  Deserializer2.h  Makefile.am  TestRunner.cpp  bytebuffertest.cpp  byteordertest.cpp  deserializertest.cpp  translatorptrtest.cpp
FormattedIO/: BufferIOV8.cpp  BufferIOV8.h  CAllButPredicate.cpp  CAllButPredicate.h  CDataSourcePredicate.h  CDesiredTypesPredicate.cpp  CDesiredTypesPredicate.h  CRingSelectPredWrapper.cpp  CRingSelectPredWrapper.h  CRingSelectionPredicate.cpp  CRingSelectionPredicate.h  CSimpleAllButPredicate.cpp  CSimpleAllButPredicate.h  CSimpleDesiredTypesPredicate.cpp  CSimpleDesiredTypesPredicate.h  Makefile.am  RingIOV10.cpp  RingIOV10.h  RingIOV11.cpp  RingIOV11.h  RingIOV12.cpp  RingIOV12.h  TestRunner.cpp  csimpleallbutpredicatetest.cpp  daq10test.cpp  daq11test.cpp  daq12test.cpp  daq8test.cpp  selecttest.cpp
IO/: CDataSink.cpp  CDataSink.h  CDataSinkException.cpp  CDataSinkException.h  CDataSinkFactory.cpp  CDataSinkFactory.h  CDataSource.cpp  CDataSource.h  CDataSourceFactory.cpp  CDataSourceFactory.h  CFakeDataSource.cpp  CFakeDataSource.h  CFileDataSink.cpp  CFileDataSink.h  CFileDataSource.cpp  CFileDataSource.h  CLoggingDataSink.cpp  CLoggingDataSink.h  CRingDataSink.cpp  CRingDataSink.h  CRingDataSource.cpp  CRingDataSource.h  CTestSourceSink.cpp  CTestSourceSink.h  Makefile.am  TestRunner.cpp  datasinkfactorytests.cpp  datasourcefactorytests.cpp  filedatasinktests.cpp  ringdatasinktests.cpp
conversion/: C10p0to11p0Mediator.cpp  C10p0to11p0Mediator.h  C10p0to8p0Mediator.cpp  C10p0to8p0Mediator.h  C8p0to10p0Mediator.cpp  C8p0to10p0Mediator.h  CCompositePredicate.cpp  CCompositePredicate.h  CPredicate.h  CProcessCountPredicate.cpp  CProcessCountPredicate.h  CSkipNumberPredicate.cpp  CSkipNumberPredicate.h  CTransform10p0to11p0.cpp  CTransform10p0to11p0.h  CTransform10p0to8p0.cpp  CTransform10p0to8p0.h  CTransform11p0to10p0.cpp  CTransform11p0to10p0.h  CTransform11p0to11p0.cpp  CTransform11p0to11p0.h  CTransform8p0to10p0.cpp  CTransform8p0to10p0.h  CTransformFactory.cpp  CTransformFactory.h  CTransformMediator.h  CTransformMediator.hpp  Main.cpp  Main.h  Makefile.am  convert_format.py  ctransformfactorytests.cpp  format_converter_options.ggo
format/: Makefile.am
format/V10/: CPhysicsEventItem.cpp  CPhysicsEventItem.h  CRingFragmentItem.cpp  CRingFragmentItem.h  CRingItem.cpp  CRingItem.h  CRingItemFactory.cpp  CRingItemFactory.h  CRingPhysicsEventCountItem.cpp  CRingPhysicsEventCountItem.h  CRingScalerItem.cpp  CRingScalerItem.h  CRingStateChangeItem.cpp  CRingStateChangeItem.h  CRingTextItem.cpp  CRingTextItem.h  CRingTimestampedRunningScalerItem.cpp  CRingTimestampedRunningScalerItem.h  CUnknownFragment.cpp  CUnknownFragment.h  CVoidItem.h  DataFormat.h  DataFormatV10.h  Makefile.am  TestRunner.cpp  factorytests.cpp  formatoutputtests.cpp  physcounttests.cpp  physeventtests.cpp  ringitem.cpp  ringitemtests.cpp  scalertests.cpp  teststate.cpp  texttest.cpp
format/V11/: CAbnormalEndItem.cpp  CAbnormalEndItem.h  CDataFormatItem.cpp  CDataFormatItem.h  CGlomParameters.cpp  CGlomParameters.h  CPhysicsEventItem.cpp  CPhysicsEventItem.h  CRingFragmentItem.cpp  CRingFragmentItem.h  CRingItem.cpp  CRingItem.h  CRingItemFactory.cpp  CRingItemFactory.h  CRingPhysicsEventCountItem.cpp  CRingPhysicsEventCountItem.h  CRingScalerItem.cpp  CRingScalerItem.h  CRingStateChangeItem.cpp  CRingStateChangeItem.h  CRingTextItem.cpp  CRingTextItem.h  CUnknownFragment.cpp  CUnknownFragment.h  DataFormat.h  DataFormatV11.h  Makefile.am  RingItemComparisons.cpp  RingItemComparisons.h  StringsToIntegers.cpp  StringsToIntegers.h  dataformattests.cpp  factorytests.cpp  formatoutputtests.cpp  fragmenttest.cpp  glomparamtests.cpp  physeventtests.cpp  ringitem.c  ringitemtests.cpp  scalertests.cpp  (+3 more)
format/V12/: CAbnormalEndItem.cpp  CAbnormalEndItem.h  CCompositeRingItem.cpp  CCompositeRingItem.h  CCompoundRingItem.cpp  CCompoundRingItem.h  CDataFormatItem.cpp  CDataFormatItem.h  CGlomParameters.cpp  CGlomParameters.h  CPhysicsEventItem.cpp  CPhysicsEventItem.h  CRawRingItem.cpp  CRawRingItem.h  CRingFragmentItem.cpp  CRingFragmentItem.h  CRingItem.cpp  CRingItem.h  CRingItemFactory.cpp  CRingItemFactory.h  CRingItemParser.cpp  CRingItemParser.h  CRingPhysicsEventCountItem.cpp  CRingPhysicsEventCountItem.h  CRingScalerItem.cpp  CRingScalerItem.h  CRingStateChangeItem.cpp  CRingStateChangeItem.h  CRingTextItem.cpp  CRingTextItem.h  DataFormat.h  Makefile.am  Makefile.in  StringsToIntegers.cpp  StringsToIntegers.h  abnormalendtests.cpp  compositeitemtests.cpp  compounditemtests.cpp  dataformattest.cpp  dataformattests.cpp  (+15 more)
format/V8/: CControlBuffer.cpp  CControlBuffer.h  CGenericBodyParser.cpp  CGenericBodyParser.h  CPhysicsEventBodyParser.cpp  CPhysicsEventBodyParser.h  CPhysicsEventBuffer.cpp  CPhysicsEventBuffer.h  CRawBuffer.cpp  CRawBuffer.h  CScalerBuffer.cpp  CScalerBuffer.h  CStandardBodyParser.cpp  CStandardBodyParser.h  CTextBuffer.cpp  CTextBuffer.h  CV8Buffer.cpp  CV8Buffer.h  CVoidBuffer.cpp  CVoidBuffer.h  ChangeBufferSize.h  DataFormat.cpp  DataFormat.h  DataFormatV8.cpp  DataFormatV8.h  Makefile.am  TestRunner.cpp  bheader.cpp  bheader.h  buffer_cast.h  ccontrolbuffertest.cpp  cgenericbodyparsertest.cpp  ctextbuffertest.cpp  cvoidbuffertest.cpp  format_cast.h  format_casttest.cpp  physicseventtest.cpp  rawbuffertest.cpp  scalerbuffertest.cpp
testutils/: Asserts.h  DebugUtils.h  Makefile.am
utils/: Makefile.am  byte_cast.h  make_unique.h
